# IDF_LVGL_DEMO

./: CMakeLists.txt  sdkconfig.old
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
components/ui/images/: ui_img_1625496403.c
components/ui/screens/: ui_Screen1.c
main/: Kconfig.projbuild  idf_component.yml  lvgl_demo_ui.c  spi_lcd_touch_example_main.c
